[package]
name = "backup"
version = "0.0.7"
authors = ["Nicolas Embriz <nbari@tequila.io>"]
description = "create encrypted backups"
documentation = "https://github.com/nbari/backup"
homepage = "https://github.com/nbari/backup"
repository = "https://github.com/nbari/backup"
readme = "README.md"
keywords = ["backup", "cli", "restore"]
categories = ["command-line-interface", "command-line-utilities"]
license = "BSD-3-Clause"
edition = "2021"

[dependencies]
anyhow = "1"
blake3 = "1.5"
chrono = "0.4"
clap = { version = "4", features = ["string", "env"] }
config = { version = "0.14", default-features = false, features = ["yaml"] }
dirs = "5"
futures = "0.3"
ignore = "0.4.23"
num_cpus = "1.16"
openssl = { version = "0.10", optional = true, features = ["vendored"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
rusqlite = { version = "0.32", features = ["bundled", "unlock_notify"] }
tempfile = "3.14"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
walkdir = "2.5"
