[package]
name = "backup"
version = "0.0.11"
authors = ["Nicolas Embriz <nbari@tequila.io>"]
description = "create encrypted backups"
documentation = "https://github.com/nbari/backup"
homepage = "https://github.com/nbari/backup"
repository = "https://github.com/nbari/backup"
readme = "README.md"
keywords = ["backup", "cli", "restore"]
categories = ["command-line-interface", "command-line-utilities"]
license = "BSD-3-Clause"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22.1"
bip39 = { version = "2.2.0", features = ["rand", "zeroize"] }
blake3 = "1.5"
chacha20poly1305 = "0.10.1"
chrono = "0.4"
clap = { version = "4", features = ["string", "env"] }
config = { version = "0.15", default-features = false, features = ["yaml"] }
dirs = "6"
futures = "0.3"
hex = "0.4.3"
hkdf = "0.12.4"
ignore = "0.4.23"
num_cpus = "1.16"
openssl = { version = "0.10", optional = true, features = ["vendored"] }
opentelemetry = "0.30"
opentelemetry-otlp = { version = "0.30", features = ["grpc-tonic", "tls"] }
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
rand = "0.9.2"
rusqlite = { version = "0.37", features = ["bundled", "unlock_notify"] }
sha2 = "0.10.9"
tempfile = "3.19"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-opentelemetry = "0.31"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
x25519-dalek = { version = "2.0.1", features = ["getrandom", "static_secrets"] }
